Update spring-boot-start.sh